--- a/Nithiin_20Z322/src/index.html
+++ b/Nithiin_20Z322/src/index.html
@@ -46,7 +46,7 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Nithiin</span>
+          Hi, my name is <span class="text-color-main">Nithiin Kathiresan</span>
           <br />
           I'm the Unknown Developer.
         </h1>
